syntax = "proto3";

message objIpAddress {
    string strIpAddress = 1;
    string subnetMask = 2;
    string prefix = 3;
    string defaultGateway = 4;
}

message writeResponse {
    string response = 1;
}

service DBAccess {
    rpc writeIpAddress (objIpAddress) returns (writeResponse);
}
